@@ -1018,8 +1018,9 @@ extern cvar_t	*r_primitives;			// "0" = based on compiled vertex array existance
 										// "2" = glDrawElements triangles
 										// "-1" = no drawing
 
-extern cvar_t	*r_inGameVideo;				// controls whether in game video should be draw
+extern cvar_t	*r_inGameVideo;			// controls whether in game video should be draw
 extern cvar_t	*r_fastsky;				// controls whether sky should be cleared or drawn
+extern cvar_t	*r_noportals;			// controls portal/mirror "second view" drawing
 extern cvar_t	*r_drawSun;				// controls drawing of sun quad
 extern cvar_t	*r_dynamiclight;		// dynamic lights enabled/disabled
 
@@ -1080,7 +1081,6 @@ extern	cvar_t	*r_flares;						// light flares
 extern	cvar_t	*r_intensity;
 
 extern	cvar_t	*r_lockpvs;
-extern	cvar_t	*r_noportals;
 extern	cvar_t	*r_portalOnly;
 
 extern	cvar_t	*r_subdivisions;
