@@ -817,7 +817,7 @@ static qbool R_MirrorViewBySurface( drawSurf_t* drawSurf, int entityNum )
 		return qfalse;
 	}
 
-	if ( r_noportals->integer || (r_fastsky->integer == 1) ) {
+	if ( r_noportals->integer ) {
 		return qfalse;
 	}
 
